--- a/src/client/index.html
+++ b/src/client/index.html
@@ -1,11 +1,42 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <title>BaseNodeJS</title>
+        <title>MultiProcessDemo</title>
         <!-- inject:css -->
         <!-- endinject -->
     </head>
     <body>
+        <header>
+                <nav class="navbar navbar-expand-lg navbar-inverse navbar-fixed-top">
+                    <div class="navbar-header">                 
+                        <button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false">
+                            <span class="sr-only">Toggle navigation</span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+                        <a class="navbar-brand pull-left" href="#">MultiProcessDemo</a>
+                    </div>
+                    <div class="collapse navbar-collapse" id="navbar">
+                        <ul class="nav navbar-nav">
+                            <li class="nav-item active">
+                                <a class="nav-link" href="#">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="https://github.com/fisolima/BaseNodeWebpack">Github</a>
+                            </li>
+                        </ul>
+                    </div>
+                </nav>
+            </header>
+        <div id="mainBody" class="container clear-top">
+        </div>
+        
+        <footer class="navbar navbar-default navbar-fixed-bottom">
+            <div class="container text-center">
+                <p class="text-muted credit">This example is provided by <a href="http://fisodev.com">Killpippo</a></p>
+            </div>
+        </footer>
         <!-- inject:js -->
         <!-- endinject -->
     </body>
