websocket connection and transfer to child process

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -34,7 +34,7 @@
             <div v-for="room in rooms">
                 <room-component :room="room"></room-component>
             </div>
-            <textarea class="col-sm-12" id="output"></textarea>
+            <ul class="col-sm-12" id="output"></ul>
         </div>
         
         <footer class="navbar navbar-default navbar-fixed-bottom">
